--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,6 +132,7 @@ header{
   position: relative;
   height: 25.648vw;
   width: 89.177vw;
+  box-shadow: 0px 4.44vw 11.11vw -2.59vw rgba(0,0,0,0.75);
 }
 video{
   object-fit: initial;
