--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,12 @@ header{
   position: relative;
   height: 50.852vw;
 }
+.headerOverlay{
+  background: linear-gradient(135deg, rgba(131,99,219,0.92) 0%, rgba(240,172,152,0.92) 100%);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
 .videoDiv{
   margin-top: 5.7vw;
   margin-left: 5.4115vw;
