--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,10 +127,12 @@ header{
   height: 50.852vw;
 }
 .headerOverlay{
-  background: linear-gradient(135deg, rgba(131,99,219,0.92) 0%, rgba(240,172,152,0.92) 100%);
+  /* background: linear-gradient(135deg, rgba(131,99,219,0.92) 0%, rgba(240,172,152,0.92) 100%); */
+  background-image: linear-gradient(to right bottom, #814bd6, #834dd2, #854fce, #8752cb, #8854c7, #a157be, #b45cb5, #c264ad, #d978a2, #e4909e, #e9aaa5, #e9c3b6);
   position: absolute;
   width: 100%;
   height: 100%;
+  opacity: 0.95;
 }
 .videoDiv{
   margin-top: 5.7vw;
@@ -334,6 +336,7 @@ main{
   border-left: 2.296vw solid rgba(255, 255, 255, 0.3);
   border-top: 2px solid rgba(255, 255, 255, 0.3);
   background-clip: padding-box;
+  /* margin-bottom: 5vw; */
 }
 .content{
   /* border: 1px solid black; */
